--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -45,7 +45,7 @@
 
           <div class="product-info">
             <h1 class="product-title">Motorola DynaTAC 8000X</h1>
-            <p>Первый в мире переносной телефон.
+            <p>Первый в мире переносной телефон.<br>
               До 30 минут разговора без проводов в любое время, в любом месте благодаря емкому аккумулятору.</p>
             <div class="product-order">
               <span class="product-price">$3,995</span>
